--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://paymentgatewayportal.blob.core.windows.net/paymentgatewayscriptprod/main.js"></script>
+    <!-- <script src="https://paymentgatewayportal.blob.core.windows.net/paymentgatewayscriptdev/main.js"></script> -->
     <title>IBEDC PAY-V_02</title>
   </head>
   <body>
